[project]
name = "rapydo_http"
version = "2.4"
description = "HTTP API server working on top of the RAPyDo framework"
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["http", "api", "rest", "web", "backend", "rapydo"]
classifiers=[
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Flask",
]

# dependencies = [
#   "Flask==2.1.1",
#   "...",
# ]

[project.urls]
homepage = "https://rapydo.github.io/docs"
documentation = "https://http-api.readthedocs.io"
repository = "https://github.com/rapydo/http-api"
# changelog = "https://github.com/rapydo/http-ap"

[project.scripts]
restapi = "restapi.__commands__:cli"

[build-system]
requires = ["setuptools>=59.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
py_version = 38
line_length = 88
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
