[project]
name = "rapydo_http"
version = "3.0"
description = "HTTP API server working on top of the RAPyDo framework"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dynamic = ["dependencies", "optional-dependencies"]
readme = "README.md"
keywords = ["http", "api", "rest", "web", "backend", "rapydo"]
classifiers=[
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements.dev.txt"]}, types = {file = ["requirements.types.txt"]}}

[project.urls]
homepage = "https://rapydo.github.io/docs"
documentation = "https://http-api.readthedocs.io"
repository = "https://github.com/rapydo/http-api"
# changelog = "https://github.com/rapydo/http-ap"

[project.scripts]
restapi = "restapi.__commands__:cli"

[build-system]
requires = ["setuptools>=64.0", "wheel>=0.34.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
restapi = ["py.typed", "templates/*", "connectors/smtp/templates/*"]

[tool.setuptools.packages.find]
exclude = ["stubs"]

[tool.black]
line-length = 88
target_version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
py_version = 39
line_length = 88
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
