[metadata]
name = rapydo_http
version = attr: restapi.__version__
description = HTTP API server working on top of the RAPyDo framework
long_description = file: README.md, LICENSE
url = https://github.com/http-api
keywords = http api rest web backend rapydo
license = MIT
classifiers =
    Programming Language :: Python
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Flask

[options]
# python_requires = >=3.9, <4
# Due to mistral (also removed str.removeprefix)
python_requires = >=3.8, <4
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  # Flask, plugins and webservers
  Flask==2.1.1
  flask-apispec==0.11.1
  Flask-Caching==1.10.1
  Flask-Cors==3.0.10
  Flask-SQLAlchemy==2.5.1
  Flask-Migrate==3.1.0
  Werkzeug==2.1.0
  gunicorn==20.1.0
  gevent==21.12.0
  PyJWT==2.3.0
  pyOpenSSL
  passlib[bcrypt]==1.7.4
  marshmallow==3.15.0
  webargs==8.1.0
  apispec==5.2.0
  # DB and services drivers
  neomodel==4.0.8
  psycopg2-binary
  PyMySQL
  redis==4.2.2
  pika
  celery[redis]==5.2.3
  flower==1.0.0
  celery-redbeat==2.0.0
  python-telegram-bot==13.11
  amqp==5.1.0
  # TOTP
  pyotp==2.6.0
  segno==1.4.1
  # Utilities
  PyYAML==6.0
  loguru
  glom
  psutil
  plumbum
  maxminddb-geolite2
  html2text
  orjson
  sentry-sdk[flask]==1.5.11
  # Tests
  pytest
  pytest-flask==1.2.0
  pytest-cov==3.0.0
  pytest-timeout==2.1.0
  pytest-sugar==0.9.4
  schemathesis==3.13.7
  Faker==13.3.3
  Telethon==1.24.0

[options.package_data]
restapi = py.typed, templates/index.html, connectors/smtp/templates/*

[options.entry_points]
console_scripts =
    restapi = restapi.__commands__:cli

[options.packages.find]
exclude =
    tests*
